# 213u8657863478129

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  grid.cpp  grid.hpp  main.cpp  toy_bot.cpp  toy_bot.hpp  user_input_handler.cpp  user_input_handler.hpp
test/: CMakeLists.txt  toybot_test.py  toybot_unit.cpp
test/expected_outputs/: a.txt  b.txt  c.txt  char_positions_error.txt  place_move.txt  place_report.txt
test/test_inputs/: char_positions_error.txt  place_move.txt  place_report.txt
